docs/release-notes/v1.4.0/readme.md
# What's New in 1.4.0

## XRIO: Fully Supported and Superior to DIGSI (Siemens)!

![XRIO: Fully Supported and Superior to Siemens](../../images/release-notes/v1.4.0/xrio.jpg)
![XRIO: Fully Supported and Superior to Siemens](../../images/release-notes/v1.4.0/xrio-2.jpg)

- Now every active overcurrent function stage is exported with exact operation/rest curve characteristics. 
- See element directional behavior 
- Enjoy Testing! 

---

## Don't lose unsaved changes!

![Don't lose unsaved changes](../../images/release-notes/v1.4.0/dont_close.jpg)

You are asked to confirm exiting software if any unsaved changes exist 

---

## New Analog Signals!

# INeg
![INeg](../../images/release-notes/v1.4.0/ineg.jpg)

# VNeg
![VNeg](../../images/release-notes/v1.4.0/vneg.jpg)

---

## Auto Assign IPs for Subnet in PISHTAZ System Configurator

![Auto Assign IPs](../../images/release-notes/v1.4.0/auto_assign.jpg)

Define gateway and subnet then let it auto assign IPs for relays in the subnet  

---

## Small but Informative

![Small but Informative](../../images/release-notes/v1.4.0/status_bar.jpg)

- See connection status, access level, new version notification and if there are any unsaved changes directy on the bottm of software in the status bar   

---


## Other improvements
- Show advanced settings based on relay model
- Confirm when setting file with different relay specification is imported
- Add UI for new settings
- Fix active function status for power protection stage 5/6 
- Fix bugs 
- UI/UX improvements
